--- a/Dashbaord-project/index.html
+++ b/Dashbaord-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Dashbaord-project-2</title>
     <!-- Normal File -->
     <link rel="stylesheet" href="css/normal.css">
     <!-- Style File -->
